# indexland

./: .swp  Cargo.toml  README.md  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
derive/: Cargo.toml  README.md
derive/src/: attrs.rs  context.rs  derive_context.rs  enum_idx.rs  lib.rs  newtype_idx.rs  shared.rs  shared_derives.rs  utils.rs
derive/tests/: mod.rs
derive/tests/ui/: arg_to_disable_bounds_checks.rs  arg_to_disable_bounds_checks.stderr  bounds_checks_mode.rs  bounds_checks_mode.stderr  from_self.stderr  no_usize_arith.rs  no_usize_arith.stderr  no_usize_arith_enum.stderr  nonexistant_trait.stderr  nonexistant_trait_newtype.rs  nonexistant_trait_newtype.stderr  omit_and_only.rs  omit_and_only.stderr
examples/: construction.rs  doubly_linked_list.rs  graph_a_star.rs  iteration.rs  linked_list.rs
indexland/: Cargo.toml  README.md
indexland/examples/: linked_list.rs
indexland/src/: idx.rs  idx_range.rs  index_array.rs  index_array_vec.rs  index_enumerate.rs  index_hash_map.rs  index_hash_set.rs  index_range.rs  index_slice.rs  index_slice_index.rs  index_small_vec.rs  index_vec.rs  index_vec_deque.rs  lib.rs  nonmax.rs
indexland/tests/: mod.rs
indexland_derive/: Cargo.toml  README.md
indexland_derive/src/: context.rs  enum_idx.rs  lib.rs  newtype_idx.rs  utils.rs
indexland_derive/test/: mod.rs
indexland_derive/tests/: mod.rs
indexland_derive/tests/ui/: arg_to_disable_bounds_checks.rs  arg_to_disable_bounds_checks.stderr  from_self.rs  no_usize_arith_enum.rs  nonexistant_trait.rs  nonexistant_trait.stderr  omit_and_only.stderr
src/: generic_index.rs  identity_hasher.rs  idx.rs  index_array.rs  index_array_vec.rs  index_enumerate.rs  index_hash_map.rs  index_hash_set.rs  index_range.rs  index_slab.rs  index_slice.rs  index_slice_index.rs  index_small_vec.rs  index_vec.rs  index_vec_deque.rs  lib.rs  nonmax.rs  raw_index_container.rs  sequence.rs  sequence_container.rs
tests/: integration.rs  mod.rs
tests/integration/: arrayvec.rs  derive_no_std.rs  idx_manual.rs  index_array.rs  index_array_vec.rs  index_hash_map.rs  index_hash_set.rs  index_vec.rs  mod.rs  no_derive_no_std.rs  no_std.rs  smallvec.rs  std_derive.rs
tests/macros/: idx_newtype.rs  index_array.rs  index_array_vec.rs  index_hash_map.rs  index_hash_set.rs  index_small_vec.rs  index_vec.rs  index_vec_deque.rs  mod.rs
tests/ui/: double_def_in_enum_index_array.stderr  double_def_in_index_array.rs  double_def_in_index_array.stderr  hole_in_enum_index_array.rs  hole_in_enum_index_array.stderr  hole_in_index_array.rs  hole_in_index_array.stderr
tests/ui_derive/: index_array_wrong_idx_type.rs  index_array_wrong_idx_type.stderr
tests/ui_full/: index_array_wrong_idx_type.stderr
xtask/: Cargo.toml
xtask/src/: main.rs
