[package]
name = "indexland_derive"

version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

description = "Derive Macros for indexland"

[lib]
name = "indexland_derive"
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.95" }
syn = { version = "2.0.104", features = ["parsing"] }
quote = "1.0.40"


[dev-dependencies]
indexland = { workspace = true, features = ["derive", "arrayvec"] }
trybuild = "1.0.105"
metamatch = "0.3"

[package.metadata.docs.rs]
rustdoc-args = [
    # link to stable instead of nightly
    "--generate-link-to-definition",
    "--extern-html-root-url=core=https://doc.rust-lang.org",
    "--extern-html-root-url=alloc=https://doc.rust-lang.org",
    "--extern-html-root-url=std=https://doc.rust-lang.org",
]
