[package]
name = "indexland"

version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

description = "Rust Collections with Newtype Indices"

[lib]
name = "indexland"

[dependencies]
indexland_derive = { path = "../indexland_derive", optional = true, default-features = false }

arrayvec = { version = "0.7.6", optional = true, default-features = false }
smallvec = { version = "1.14.0", optional = true, default-features = false, features = [
    "const_new",
] }
indexmap = { version = "2.7.1", optional = true, default-features = false }

serde = { version = "1.0.218", optional = true, default-features = false }


[dev-dependencies]
derive_more = { version = "2.0.1", features = ["full"] }


[package.metadata.docs.rs]
features = ["full"]
rustdoc-args = ["--extern="]


[features]
default = ["std", "derive", "arrayvec"]

full = ["std", "derive", "nonmax", "arrayvec", "smallvec", "indexmap", "serde"]

derive = ["dep:indexland_derive"]

nonmax = []

disable_debuggable_nonmax = []

alloc = []

std = ["alloc", "arrayvec/std", "indexmap/std"]

smallvec = ["std", "dep:smallvec"] # smallvec v1 does not support nostd

arrayvec = ["dep:arrayvec"]

indexmap = ["alloc", "dep:indexmap"]

serde = ["dep:serde", "arrayvec/serde", "smallvec/serde", "indexmap/serde"]
