[package]
name = "indexland_derive"

version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

description = "Derive Macros for indexland"

[lib]
name = "indexland_derive"
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.93" }
syn = { version = "2.0.98", features = ["parsing"] }
quote = "1.0.38"
trybuild = "1.0.104"

[dev-dependencies]
indexland = { path = "../indexland", features = ["derive"] }
