[package]
name = "xtask"
publish = false
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
